@@ -3,6 +3,7 @@
 ./Tests/Mono.Rocks.Tests/BaseRocksFixture.cs
 ./Tests/Mono.Rocks.Tests/KeyValuePairTest.cs
 ./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
+./Tests/Mono.Rocks.Tests/SequenceTest.cs
 ./Tests/Mono.Rocks.Tests/StringTest.cs
 ./Tests/Mono.Rocks.Tests/TextReaderTest.cs
 ./Tests/Mono.Rocks.Tests/IEnumerableTest.cs
